src/test/deca/syntax/invalid/inst/test_inst_add_string_to_int.deca
// Description:
//    tests de programme syntaxiquement incorrects : signe + en trop
//
// Resultats:
//    Ligne 12: mismatched input ';' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}
//    
//
// Historique:
//    cree le 01/01/2024

{
        int i = 0 + ;
        
}
